# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/location/config.gni")
import("//build/ohos.gni")

ohos_executable("ohos-location-manager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "src/main.cpp",
  ]

  include_dirs = [
    "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
    "$LOCATION_ROOT_DIR/frameworks/native/locator_sdk/include",
    "$LOCATION_ROOT_DIR/frameworks/location_common/common/include",
    "//third_party/nlohmann_json/src",
  ]

  deps = [
    "$LOCATION_ROOT_DIR/frameworks/native/locator_sdk:locator_sdk",
    "$LOCATION_ROOT_DIR/frameworks/location_common/common:lbsservice_common",
    "//third_party/nlohmann_json:nlohmann_json_header",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = []
  if (location_feature_with_gnss) {
    defines += [ "FEATURE_GNSS_SUPPORT" ]
  }
  if (location_feature_with_network) {
    defines += [ "FEATURE_NETWORK_SUPPORT" ]
  }

  ldflags = [
    "-Wl,--as-needed",
  ]

  cflags_cc = [
    "-ffunction-sections",
    "-fdata-sections",
  ]

  install_enable = true
  install_images = ["system"]
  relative_install_dir = "cli_tool/executable"
  part_name = "location"
  subsystem_name = "location"
}