import("//build/ohos.gni")

ohos_executable("ohos-location") {
  sources = [
    "src/main.cpp",
  ]

  include_dirs = [
    "src",
    "//base/location/location/interfaces/inner_api/include",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  ldflags = [
    "-Wl,--as-needed",
    "-Wl,--gc-sections",
  ]

  cflags_cc = [
    "-ffunction-sections",
    "-fdata-sections",
    "-flto=thin",
    "-Os",
  ]

  deps = [
    "//base/location/location/frameworks/native/locator_sdk:locator_sdk",
    "//base/location/location/frameworks/location_common/common:lbsservice_common",
  ]

  external_deps = [
    "ipc:ipc_core",
    "ipc:ipc_single",
    "samgr:samgr_proxy"
  ]

  install_enable = true
  install_images = ["system"]
  relative_install_dir = "cli_tool/executable"

  subsystem_name = "location"
  part_name = "location"
}