 # Copyright (C) 2026 Huawei Device Co., Ltd. 
 # Licensed under the Apache License, Version 2.0 (the "License"); 
 # you may not use this file except in compliance with the License. 
 # You may obtain a copy of the License at 
 # 
 #     http://www.apache.org/licenses/LICENSE-2.0 
 # 
 # Unless required by applicable law or agreed to in writing, software 
 # distributed under the License is distributed on an "AS IS" BASIS, 
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 # See the License for the specific language governing permissions and 
 # limitations under the License.
 
 import("//build/ohos.gni")
 import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-location") {
  branch_protector_ret = "pac_ret"
  sources = [
    "src/main.cpp",
  ]

  include_dirs = [
    "src",
    "//base/location/location/interfaces/inner_api/include",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  ldflags = [
    "-Wl,--as-needed",
    "-Wl,--gc-sections",
  ]

  cflags_cc = [
    "-ffunction-sections",
    "-fdata-sections",
    "-flto=thin",
    "-Os",
  ]

  deps = [
    "//base/location/location/frameworks/native/locator_sdk:locator_sdk",
    "//base/location/location/frameworks/location_common/common:lbsservice_common",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "samgr:samgr_proxy"
  ]

  install_enable = true
  install_images = ["system"]
  relative_install_dir = "cli_tool/executable"
  cli_config_file = "config.json"

  subsystem_name = "location"
  part_name = "location"
}