# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("geolocation") {
  install_enable = true
  include_dirs = [
    "//base/location/frameworks/js/napi/include",
    "//base/location/interfaces/inner_api/include",
  ]

  sources = [
    "//base/location/frameworks/js/napi/source/location_napi_adapter.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_entry.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_event.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_system.cpp",
  ]

  deps = [
    "//base/location/frameworks/location_common/common:lbsservice_common",
    "//base/location/frameworks/native:locator_sdk",
  ]

  external_deps = [
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"
  part_name = "location"
  subsystem_name = "location"
}

ohos_static_library("geolocation_static") {
  include_dirs = [
    "//base/location/frameworks/js/napi/include",
    "//base/location/interfaces/inner_api/include",
  ]

  sources = [
    "//base/location/frameworks/js/napi/source/location_napi_adapter.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_entry.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_event.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_system.cpp",
  ]

  deps = [
    "//base/location/frameworks/location_common/common:lbsservice_common",
    "//base/location/frameworks/native:locator_sdk",
  ]

  external_deps = [
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  part_name = "location"
  subsystem_name = "location"
}

ohos_shared_library("geolocationmanager") {
  install_enable = true
  include_dirs = [
    "//base/location/frameworks/js/napi/include",
    "//base/location/interfaces/inner_api/include",
  ]

  sources = [
    "//base/location/frameworks/js/napi/source/location_napi_adapter.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_entry.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_errcode.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_event.cpp",
    "//base/location/frameworks/js/napi/source/location_napi_system.cpp",
  ]

  deps = [
    "//base/location/frameworks/location_common/common:lbsservice_common",
    "//base/location/frameworks/native:locator_sdk",
  ]

  defines = [ "ENABLE_NAPI_MANAGER" ]

  external_deps = [
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"
  part_name = "location"
  subsystem_name = "location"
}
